# iii

./: AGENTS.md  Cargo.toml  contributors.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/scripts/: bump_manifests.py  test_bump_manifests.py
.github/workflows/: _publish-engine-workers.yml  ci.yml  create-tag.yml  deploy-website.yml  release-iii.yml
blog/: README.md
crates/iii-init/: Cargo.toml
crates/iii-supervisor/: Cargo.toml
crates/iii-supervisor/src/: child.rs  control.rs  main.rs
crates/iii-worker/: Cargo.toml
dev/bench/: data.js
docs/: changelog.mdx  custom.css  docs.json  index.mdx.skill.md  install.mdx.skill.md  quickstart.mdx  quickstart.mdx.skill.md
docs/advanced/: telemetry.mdx
docs/api-reference/: engine-config.mdx
docs/changelog/: index.mdx
docs/creating-workers/: channels.mdx.skill.md  functions.mdx  functions.mdx.skill.md  index.mdx  index.mdx.skill.md  triggers.mdx  triggers.mdx.skill.md  workers-registry.mdx.skill.md  workers.mdx  workers.mdx.skill.md
docs/how-to/: build-a-realtime-todo-app.mdx.skill.md  create-custom-trigger-type.mdx  deploy-engine.mdx  develop-custom-worker.mdx  schedule-cron-task.mdx.skill.md  trigger-actions.mdx  use-trigger-conditions.mdx.skill.md
docs/patterns/: adapter-pattern.mdx.skill.md  reactive-state-pattern.mdx.skill.md
docs/primitives-and-concepts/: trigger-actions.mdx
docs/sdk-reference/: browser-sdk.mdx.skill.md  engine-sdk.mdx.skill.md  (+3 more)
engine/: Cargo.toml
tech-specs/: engine-register-trigger-metadata.md
website/: index.html  posthog-consent.js  privacy.html  sitemap.xml
(+139 files in other folders)
