[package]
name = "iii-supervisor"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
description = "In-VM process supervisor for iii local-path workers. Holds a long-lived VM open while cycling the user's worker process on host-driven file changes."

[lib]
name = "iii_supervisor"
path = "src/lib.rs"

[[bin]]
name = "iii-supervisor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30.1", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
